Made the interface look nicer with no preview window present

--- a/src/scss/_interface.scss
+++ b/src/scss/_interface.scss
@@ -49,8 +49,13 @@
   }
 }
 
+#scif-form-body {
+  background-color: #fcfcfc;
+}
+
 #shortcode-editors,
 #scif-preview-window {
+  background-color: #fff;
   height: 350px;
 }
 
