--- a/src/scss/_interface.scss
+++ b/src/scss/_interface.scss
@@ -68,7 +68,19 @@
   border-left: 1px solid #ddd;
   box-sizing: border-box;
   padding-left: 1em;
+  position: relative;
   width: calc(50% - 1em - 1px);
+
+  .field-label {
+    display: block;
+  }
+}
+
+#scif-loading {
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 #scif-preview-iframe {
